--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>بيب بيب - تطبيق التنقل الذكي - تحديث</title>
+    <title data-translate="websiteTitle">بيب بيب - تطبيق التنقل الذكي - تحديث</title>
     <link rel="icon" href="logo.png" type="image/png">
 <link rel="apple-touch-icon" href="logo.png">
 <link rel="shortcut icon" href="logo.png" type="image/png">
@@ -765,6 +765,7 @@ html[dir="ltr"] body {
         const translations = {
             ar: {
                 // Header
+                websiteTitle:"بيب بيب - تطبيق التنقل الذكي",
                 menu: "القائمة",
                 downloadApp: "حمل التطبيق الآن",
                 language: "اللغة",
@@ -862,6 +863,7 @@ joinPartner: "انضم كشريك الان",
             },
             en: {
                 // Header
+                websiteTitle:"Beep Beep - Smart Mobility App",
                 menu: "Menu",
                 downloadApp: "Download App Now",
                 language: "Language",
