update footer in all pages

--- a/safety.html
+++ b/safety.html
@@ -920,7 +920,7 @@
           </p>
 
           <!-- Footer Links -->
-          <div class="flex space-x-6 text-sm">
+          <div class="flex gap-6 text-sm">
             <a
               href="privacy.html"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
@@ -942,18 +942,7 @@
           </div>
 
           <!-- Social Icons -->
-          <div class="flex space-x-4">
-            <a
-              href="#"
-              aria-label="Facebook"
-              class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
-            >
-              <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                <path
-                  d="M14 13.5H16.5L17 9.5H14V7.5C14 6.45 14 5.5 16 5.5H17V2.5C16.327 2.454 15.632 2.492 14.945 2.5C13.568 2.5 12.398 3.076 11.531 4.225C11.196 4.757 11 5.424 11 6.25V9.5H8V13.5H11V22H14V13.5Z"
-                />
-              </svg>
-            </a>
+          <div class="flex gap-4" dir="ltr">
             <a
               href="https://x.com/beepbeepksa?s=11"
               aria-label="X"
@@ -1072,7 +1061,7 @@
           // Safety Test Section
           safetyTestTitle: "Do you know the safety instructions?",
           safetyTestDescription:
-            "Take the Beep beep safety test and get a discount code and a free helmet",
+            "Take the Beep Beep safety test and get a discount code and a free helmet",
           safetyTestOffer:
             "Get a special discount + free helmet when you pass the test",
           startSafetyTest: "Start Safety Test Now",
@@ -1081,10 +1070,10 @@
           // Values Section
           valuesTitle: "What you need to know before you ride",
           valuesDescription:
-            "At Beep beep, we believe smart mobility combines flexibility, safety, and sustainability",
+            "At Beep Beep, we believe smart mobility combines flexibility, safety, and sustainability",
           flexibilityTitle: "Seamless mobility that fits your lifestyle",
           flexibilityDescription:
-            "With Beep beep, you enjoy scooter and bike rental services within the city that keep up with your fast-paced lifestyle. Less time wasted on the road, a comfortable experience for your budget, making it your reliable choice for short trips.",
+            "With Beep Beep, you enjoy scooter and bike rental services within the city that keep up with your fast-paced lifestyle. Less time wasted on the road, a comfortable experience for your budget, making it your reliable choice for short trips.",
           safetyTitle: "High safety and advanced technologies",
           safetyDescription:
             "We provide an integrated system of technical solutions that combine high safety, operational efficiency, and attention to sustainability. We continuously develop our technologies to make the experience easier, clearer, and closer to your daily needs.",
@@ -1097,13 +1086,13 @@
             "We work to provide solutions that help people move easily and contribute to building more active cities. Through our partnerships with local operators, we open doors to sustainable income and contribute to the development of urban mobility services.",
           expansionTitle: "Expansion Journey",
           expansionDescription1:
-            "Beep beep's journey started from Saudi Arabia, and today we are expanding our presence with confident steps to reach new cities and communities. We offer a mobility experience that combines enjoyment, flexibility, and ease of use to serve various urban mobility needs in a practical and comfortable way.",
+            "Beep Beep's journey started from Saudi Arabia, and today we are expanding our presence with confident steps to reach new cities and communities. We offer a mobility experience that combines enjoyment, flexibility, and ease of use to serve various urban mobility needs in a practical and comfortable way.",
           expansionDescription2:
             "We believe that modern mobility is an essential part of quality of life, so we continuously work to provide solutions that help people move easily and contribute to building more active, efficient, and sustainable cities.",
           expansionTagline: "From Saudi Arabia to the World",
 
           // Footer
-          copyright: "&copy; 2025 Beep beep App. All rights reserved.",
+          copyright: "&copy; 2025 Beep Beep App. All rights reserved.",
           privacy: "Privacy Policy",
           terms: "Terms of Service",
           contact: "Contact Us",
@@ -1116,7 +1105,7 @@
           // Safety Test Section
           safetyTestTitle: "Kennen Sie die Sicherheitsanweisungen?",
           safetyTestDescription:
-            "Machen Sie den Beep beep Sicherheitstest und erhalten Sie einen Rabattcode und einen kostenlosen Helm",
+            "Machen Sie den Beep Beep Sicherheitstest und erhalten Sie einen Rabattcode und einen kostenlosen Helm",
           safetyTestOffer:
             "Erhalten Sie einen Sonderrabatt + kostenlosen Helm, wenn Sie den Test bestehen",
           startSafetyTest: "Sicherheitstest jetzt starten",
@@ -1125,10 +1114,10 @@
           // Values Section
           valuesTitle: "Was Sie wissen müssen, bevor Sie fahren",
           valuesDescription:
-            "Bei Beep beep glauben wir, dass intelligente Mobilität Flexibilität, Sicherheit und Nachhaltigkeit kombiniert",
+            "Bei Beep Beep glauben wir, dass intelligente Mobilität Flexibilität, Sicherheit und Nachhaltigkeit kombiniert",
           flexibilityTitle: "Nahtlose Mobilität, die zu Ihrem Lebensstil passt",
           flexibilityDescription:
-            "Mit Beep beep genießen Sie Scooter- und Fahrradverleihdienste in der Stadt, die mit Ihrem schnelllebigen Lebensstil Schritt halten. Weniger Zeitverschwendung auf der Straße, ein komfortables Erlebnis für Ihr Budget, das es zu Ihrer zuverlässigen Wahl für kurze Strecken macht.",
+            "Mit Beep Beep genießen Sie Scooter- und Fahrradverleihdienste in der Stadt, die mit Ihrem schnelllebigen Lebensstil Schritt halten. Weniger Zeitverschwendung auf der Straße, ein komfortables Erlebnis für Ihr Budget, das es zu Ihrer zuverlässigen Wahl für kurze Strecken macht.",
           safetyTitle: "Hohe Sicherheit und fortschrittliche Technologien",
           safetyDescription:
             "Wir bieten ein integriertes System technischer Lösungen, die hohe Sicherheit, betriebliche Effizienz und Nachhaltigkeit kombinieren. Wir entwickeln unsere Technologien kontinuierlich weiter, um das Erlebnis einfacher, klarer und näher an Ihren täglichen Bedürfnissen zu gestalten.",
@@ -1141,13 +1130,13 @@
             "Wir arbeiten daran, Lösungen zu bieten, die Menschen helfen, sich leicht zu bewegen und zum Aufbau aktiverer Städte beitragen. Durch unsere Partnerschaften mit lokalen Betreibern öffnen wir Türen zu nachhaltigem Einkommen und tragen zur Entwicklung urbaner Mobilitätsdienste bei.",
           expansionTitle: "Expansionsreise",
           expansionDescription1:
-            "Die Reise von Beep beep begann in Saudi-Arabien, und heute erweitern wir unsere Präsenz mit selbstbewussten Schritten, um neue Städte und Gemeinden zu erreichen. Wir bieten ein Mobilitätserlebnis, das Genuss, Flexibilität und Benutzerfreundlichkeit kombiniert, um verschiedene urbane Mobilitätsbedürfnisse auf praktische und komfortable Weise zu bedienen.",
+            "Die Reise von Beep Beep begann in Saudi-Arabien, und heute erweitern wir unsere Präsenz mit selbstbewussten Schritten, um neue Städte und Gemeinden zu erreichen. Wir bieten ein Mobilitätserlebnis, das Genuss, Flexibilität und Benutzerfreundlichkeit kombiniert, um verschiedene urbane Mobilitätsbedürfnisse auf praktische und komfortable Weise zu bedienen.",
           expansionDescription2:
             "Wir glauben, dass moderne Mobilität ein wesentlicher Bestandteil der Lebensqualität ist, daher arbeiten wir kontinuierlich daran, Lösungen zu bieten, die Menschen helfen, sich leicht zu bewegen und zum Aufbau aktiverer, effizienterer und nachhaltigerer Städte beizutragen.",
           expansionTagline: "Von Saudi-Arabien in die Welt",
 
           // Footer
-          copyright: "&copy; 2025 Beep beep App. Alle Rechte vorbehalten.",
+          copyright: "&copy; 2025 Beep Beep App. Alle Rechte vorbehalten.",
           privacy: "Datenschutzrichtlinie",
           terms: "Nutzungsbedingungen",
           contact: "Kontaktieren Sie uns",
@@ -1160,7 +1149,7 @@
           // Safety Test Section
           safetyTestTitle: "¿Conoces las instrucciones de seguridad?",
           safetyTestDescription:
-            "Realiza la prueba de seguridad de Beep beep y obtén un código de descuento y un casco gratuito",
+            "Realiza la prueba de seguridad de Beep Beep y obtén un código de descuento y un casco gratuito",
           safetyTestOffer:
             "Obtén un descuento especial + casco gratuito cuando apruebes la prueba",
           startSafetyTest: "Iniciar Prueba de Seguridad Ahora",
@@ -1169,11 +1158,11 @@
           // Values Section
           valuesTitle: "Lo que necesitas saber antes de conducir",
           valuesDescription:
-            "En Beep beep, creemos que la movilidad inteligente combina flexibilidad, seguridad y sostenibilidad",
+            "En Beep Beep, creemos que la movilidad inteligente combina flexibilidad, seguridad y sostenibilidad",
           flexibilityTitle:
             "Movilidad sin interrupciones que se adapta a tu estilo de vida",
           flexibilityDescription:
-            "Con Beep beep, disfrutas de servicios de alquiler de scooters y bicicletas dentro de la ciudad que se mantienen al día con tu estilo de vida acelerado. Menos tiempo perdido en el camino, una experiencia cómoda para tu presupuesto, convirtiéndolo en tu opción confiable para viajes cortos.",
+            "Con Beep Beep, disfrutas de servicios de alquiler de scooters y bicicletas dentro de la ciudad que se mantienen al día con tu estilo de vida acelerado. Menos tiempo perdido en el camino, una experiencia cómoda para tu presupuesto, convirtiéndolo en tu opción confiable para viajes cortos.",
           safetyTitle: "Alta seguridad y tecnologías avanzadas",
           safetyDescription:
             "Proporcionamos un sistema integrado de soluciones técnicas que combinan alta seguridad, eficiencia operativa y atención a la sostenibilidad. Desarrollamos continuamente nuestras tecnologías para hacer la experiencia más fácil, clara y cercana a tus necesidades diarias.",
@@ -1187,14 +1176,14 @@
             "Trabajamos para proporcionar soluciones que ayuden a las personas a moverse fácilmente y contribuyan a construir ciudades más activas. A través de nuestras asociaciones con operadores locales, abrimos puertas a ingresos sostenibles y contribuimos al desarrollo de servicios de movilidad urbana.",
           expansionTitle: "Viaje de Expansión",
           expansionDescription1:
-            "El viaje de Beep beep comenzó desde Arabia Saudita, y hoy estamos expandiendo nuestra presencia con pasos seguros para llegar a nuevas ciudades y comunidades. Ofrecemos una experiencia de movilidad que combina disfrute, flexibilidad y facilidad de uso para servir diversas necesidades de movilidad urbana de manera práctica y cómoda.",
+            "El viaje de Beep Beep comenzó desde Arabia Saudita, y hoy estamos expandiendo nuestra presencia con pasos seguros para llegar a nuevas ciudades y comunidades. Ofrecemos una experiencia de movilidad que combina disfrute, flexibilidad y facilidad de uso para servir diversas necesidades de movilidad urbana de manera práctica y cómoda.",
           expansionDescription2:
             "Creemos que la movilidad moderna es una parte esencial de la calidad de life, por lo que trabajamos continuamente para proporcionar soluciones que ayuden a las personas a moverse fácilmente y contribuyan a construir ciudades más activas, eficientes y sostenibles.",
           expansionTagline: "De Arabia Saudita al Mundo",
 
           // Footer
           copyright:
-            "&copy; 2025 Aplicación Beep beep. Todos los derechos reservados.",
+            "&copy; 2025 Aplicación Beep Beep. Todos los derechos reservados.",
           privacy: "Política de Privacidad",
           terms: "Términos de Servicio",
           contact: "Contáctanos",
