--- a/invest-with-beeb-beeb.html
+++ b/invest-with-beeb-beeb.html
@@ -731,7 +731,7 @@
           </p>
 
           <!-- Footer Links -->
-          <div class="flex space-x-6 text-sm">
+          <div class="flex gap-6 text-sm">
             <a
               href="privacy.html"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
@@ -753,18 +753,7 @@
           </div>
 
           <!-- Social Icons -->
-          <div class="flex space-x-4">
-            <a
-              href="#"
-              aria-label="Facebook"
-              class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
-            >
-              <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                <path
-                  d="M14 13.5H16.5L17 9.5H14V7.5C14 6.45 14 5.5 16 5.5H17V2.5C16.327 2.454 15.632 2.492 14.945 2.5C13.568 2.5 12.398 3.076 11.531 4.225C11.196 4.757 11 5.424 11 6.25V9.5H8V13.5H11V22H14V13.5Z"
-                />
-              </svg>
-            </a>
+          <div class="flex gap-4" dir="ltr">
             <a
               href="https://x.com/beepbeepksa?s=11"
               aria-label="X"
@@ -872,7 +861,7 @@
           language: "Language",
 
           // Form section
-          partnershipRequest: "Partnership Request with Beep beep",
+          partnershipRequest: "Partnership Request with Beep Beep",
           fillFormBelow: "Fill out the form below and we'll contact you soon",
           fullName: "Full Name",
           enterFullName: "Enter your full name",
@@ -892,7 +881,7 @@
             "Your request has been sent successfully! We will contact you soon",
 
           // Footer
-          copyright: "&copy; 2025 Beep beep App. All rights reserved.",
+          copyright: "&copy; 2025 Beep Beep App. All rights reserved.",
           privacy: "Privacy Policy",
           terms: "Terms of Service",
           contact: "Contact Us",
@@ -904,7 +893,7 @@
           language: "Sprache",
 
           // Form section
-          partnershipRequest: "Partnerschaftsanfrage mit Beep beep",
+          partnershipRequest: "Partnerschaftsanfrage mit Beep Beep",
           fillFormBelow:
             "Füllen Sie das untenstehende Formular aus und wir werden uns bald bei Ihnen melden",
           fullName: "Vollständiger Name",
@@ -925,7 +914,7 @@
             "Ihre Anfrage wurde erfolgreich gesendet! Wir werden uns bald bei Ihnen melden",
 
           // Footer
-          copyright: "&copy; 2025 Beep beep App. Alle Rechte vorbehalten.",
+          copyright: "&copy; 2025 Beep Beep App. Alle Rechte vorbehalten.",
           privacy: "Datenschutzrichtlinie",
           terms: "Nutzungsbedingungen",
           contact: "Kontaktieren Sie uns",
@@ -937,7 +926,7 @@
           language: "Idioma",
 
           // Form section
-          partnershipRequest: "Solicitud de Asociación con Beep beep",
+          partnershipRequest: "Solicitud de Asociación con Beep Beep",
           fillFormBelow:
             "Complete el formulario a continuación y nos pondremos en contacto con usted pronto",
           fullName: "Nombre Completo",
@@ -959,7 +948,7 @@
 
           // Footer
           copyright:
-            "&copy; 2025 Aplicación Beep beep. Todos los derechos reservados.",
+            "&copy; 2025 Aplicación Beep Beep. Todos los derechos reservados.",
           privacy: "Política de Privacidad",
           terms: "Términos de Servicio",
           contact: "Contáctanos",
