--- a/jobs.html
+++ b/jobs.html
@@ -525,7 +525,7 @@
           </p>
 
           <!-- Footer Links -->
-          <div class="flex space-x-6 text-sm">
+          <div class="flex gap-6 text-sm">
             <a
               href="#"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
@@ -547,18 +547,7 @@
           </div>
 
           <!-- Social Icons -->
-          <div class="flex space-x-4">
-            <a
-              href="#"
-              aria-label="Facebook"
-              class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
-            >
-              <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                <path
-                  d="M14 13.5H16.5L17 9.5H14V7.5C14 6.45 14 5.5 16 5.5H17V2.5C16.327 2.454 15.632 2.492 14.945 2.5C13.568 2.5 12.398 3.076 11.531 4.225C11.196 4.757 11 5.424 11 6.25V9.5H8V13.5H11V22H14V13.5Z"
-                />
-              </svg>
-            </a>
+          <div class="flex gap-4" dir="ltr">
             <a
               href="#"
               aria-label="Twitter"
@@ -603,7 +592,7 @@
           language: "Language",
 
           // Footer
-          copyright: "&copy; 2024 Beep beep App. All rights reserved.",
+          copyright: "&copy; 2024 Beep Beep App. All rights reserved.",
           privacy: "Privacy Policy",
           terms: "Terms of Service",
           contact: "Contact Us",
@@ -615,7 +604,7 @@
           language: "Sprache",
 
           // Footer
-          copyright: "&copy; 2024 Beep beep App. Alle Rechte vorbehalten.",
+          copyright: "&copy; 2024 Beep Beep App. Alle Rechte vorbehalten.",
           privacy: "Datenschutzrichtlinie",
           terms: "Nutzungsbedingungen",
           contact: "Kontaktieren Sie uns",
@@ -628,7 +617,7 @@
 
           // Footer
           copyright:
-            "&copy; 2024 Aplicación Beep beep. Todos los derechos reservados.",
+            "&copy; 2024 Aplicación Beep Beep. Todos los derechos reservados.",
           privacy: "Política de Privacidad",
           terms: "Términos de Servicio",
           contact: "Contáctanos",
