--- a/privacy.html
+++ b/privacy.html
@@ -774,7 +774,7 @@
             الخاصة بنا، يرجى الاتصال بنا عبر:
           </p>
           <ul class="privacy-ul">
-            <li>البريد الإلكتروني: support@peppep.com</li>
+            <li>البريد الإلكتروني: info@beepbeepksa.com</li>
             <li>الهاتف: 0115079119</li>
             <li>ساعات العمل: من الأحد إلى الخميس، 8 صباحاً - 5 مساءً</li>
           </ul>
@@ -798,7 +798,7 @@
           </p>
 
           <!-- Footer Links -->
-          <div class="flex space-x-6 text-sm">
+          <div class="flex gap6 text-sm">
             <a
               href="privacy.html"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
@@ -820,18 +820,7 @@
           </div>
 
           <!-- Social Icons -->
-          <div class="flex space-x-4">
-            <a
-              href="#"
-              aria-label="Facebook"
-              class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
-            >
-              <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                <path
-                  d="M14 13.5H16.5L17 9.5H14V7.5C14 6.45 14 5.5 16 5.5H17V2.5C16.327 2.454 15.632 2.492 14.945 2.5C13.568 2.5 12.398 3.076 11.531 4.225C11.196 4.757 11 5.424 11 6.25V9.5H8V13.5H11V22H14V13.5Z"
-                />
-              </svg>
-            </a>
+          <div class="flex gap-4" dir="ltr">
             <a
               href="https://x.com/beepbeepksa?s=11"
               aria-label="X"
@@ -919,7 +908,7 @@
           language: "Language",
 
           // Footer
-          copyright: "&copy; 2025 Beep beep App. All rights reserved.",
+          copyright: "&copy; 2025 Beep Beep App. All rights reserved.",
           privacy: "Privacy Policy",
           terms: "Terms of Service",
           contact: "Contact Us",
@@ -930,7 +919,7 @@
           language: "Sprache",
 
           // Footer
-          copyright: "&copy; 2025 Beep beep App. Alle Rechte vorbehalten.",
+          copyright: "&copy; 2025 Beep Beep App. Alle Rechte vorbehalten.",
           privacy: "Datenschutzrichtlinie",
           terms: "Nutzungsbedingungen",
           contact: "Kontaktieren Sie uns",
@@ -942,7 +931,7 @@
 
           // Footer
           copyright:
-            "&copy; 2025 Aplicación Beep beep. Todos los derechos reservados.",
+            "&copy; 2025 Aplicación Beep Beep. Todos los derechos reservados.",
           privacy: "Política de Privacidad",
           terms: "Términos de Servicio",
           contact: "Contáctanos",
