change demo and links in footer in all pages and update assets

--- a/jobs.html
+++ b/jobs.html
@@ -263,7 +263,7 @@
               class="absolute -inset-1 bg-primary-yellow rounded-full blur opacity-30"
             ></div>
             <img
-              src="logo.png"
+              src="/assets/img/logo.png"
               alt="لوجو بيب بيب"
               class="h-16 w-16 object-contain relative"
             />
@@ -527,18 +527,21 @@
           <!-- Footer Links -->
           <div class="flex gap-6 text-sm">
             <a
+              target="_blank"
               href="#"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
               data-translate="privacy"
               >سياسة الخصوصية</a
             >
             <a
+              target="_blank"
               href="#"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
               data-translate="terms"
               >شروط الخدمة</a
             >
             <a
+              target="_blank"
               href="#"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
               data-translate="contact"
@@ -549,6 +552,7 @@
           <!-- Social Icons -->
           <div class="flex gap-4" dir="ltr">
             <a
+              target="_blank"
               href="#"
               aria-label="Twitter"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
