--- a/safety.html
+++ b/safety.html
@@ -450,7 +450,7 @@
               class="absolute -inset-1 bg-primary-yellow rounded-full blur opacity-30"
             ></div>
             <img
-              src="logo.png"
+              src="/assets/img/logo.png"
               alt="لوجو بيب بيب"
               class="h-16 w-16 object-contain relative"
             />
@@ -627,7 +627,7 @@
             <div class="lg:w-1/2 w-full mt-8 lg:mt-0" data-aos="fade-left">
               <div class="relative">
                 <img
-                  src="scooters.jpeg"
+                  src="/assets/img/scooters.jpeg"
                   alt="سكوترات كهربائية السعودية"
                   class="scooter-image w-full max-w-xs md:max-w-md mx-auto lg:max-w-lg floating"
                 />
@@ -922,18 +922,21 @@
           <!-- Footer Links -->
           <div class="flex gap-6 text-sm">
             <a
+              target="_blank"
               href="privacy.html"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
               data-translate="privacy"
               >سياسة الخصوصية</a
             >
             <a
+              target="_blank"
               href="terms.html"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
               data-translate="terms"
               >شروط الخدمة</a
             >
             <a
+              target="_blank"
               href="contact.html"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
               data-translate="contact"
@@ -944,6 +947,7 @@
           <!-- Social Icons -->
           <div class="flex gap-4" dir="ltr">
             <a
+              target="_blank"
               href="https://x.com/beepbeepksa?s=11"
               aria-label="X"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
@@ -956,6 +960,7 @@
             </a>
 
             <a
+              target="_blank"
               href="https://www.instagram.com/beepbeepksa?igsh=YmZzdnMwN2FmZmE="
               aria-label="Instagram"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
@@ -967,6 +972,7 @@
               </svg>
             </a>
             <a
+              target="_blank"
               href="https://www.linkedin.com/company/beepbeepksa/"
               aria-label="LinkedIn"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
@@ -978,6 +984,7 @@
               </svg>
             </a>
             <a
+              target="_blank"
               href="https://www.tiktok.com/@beepbeepksa?_r=1&_t=ZS-91qAFEMO7Dc"
               aria-label="TikTok"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
@@ -989,6 +996,7 @@
               </svg>
             </a>
             <a
+              target="_blank"
               href="https://snapchat.com/t/mr3outsc"
               aria-label="Snapchat"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
