--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>اتصل بنا - بيب بيب</title>
-    <link rel="icon" href="logo.png" type="image/png" />
-    <link rel="apple-touch-icon" href="logo.png" />
-    <link rel="shortcut icon" href="logo.png" type="image/png" />
+    <link rel="icon" href="assets/img/logo.png" type="image/png" />
+    <link rel="apple-touch-icon" href="/assets/img/logo.png" />
+    <link rel="shortcut icon" href="/assets/img/logo.png" type="image/png" />
     <!-- Load Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- AOS Library for Scroll Animations -->
@@ -504,7 +504,7 @@
               class="absolute -inset-1 bg-primary-yellow rounded-full blur opacity-30"
             ></div>
             <img
-              src="logo.png"
+              src="/assets/img/logo.png"
               alt="لوجو بيب بيب"
               class="h-16 w-16 object-contain relative"
             />
@@ -768,6 +768,7 @@
 
         <div class="social-links">
           <a
+            target="_blank"
             href="https://x.com/beepbeepksa?s=11"
             class="social-link"
             aria-label="X"
@@ -780,6 +781,7 @@
           </a>
 
           <a
+            target="_blank"
             href="https://www.instagram.com/beepbeepksa?igsh=YmZzdnMwN2FmZmE="
             class="social-link"
             aria-label="Instagram"
@@ -791,6 +793,7 @@
             </svg>
           </a>
           <a
+            target="_blank"
             href="https://www.linkedin.com/company/beepbeepksa/"
             class="social-link"
             aria-label="LinkedIn"
@@ -802,6 +805,7 @@
             </svg>
           </a>
           <a
+            target="_blank"
             href="https://www.tiktok.com/@beepbeepksa?_r=1&_t=ZS-91qAFEMO7Dc"
             class="social-link"
             aria-label="TikTok"
@@ -813,6 +817,7 @@
             </svg>
           </a>
           <a
+            target="_blank"
             href="https://snapchat.com/t/mr3outsc"
             class="social-link"
             aria-label="Snapchat"
@@ -845,18 +850,21 @@
           <!-- Footer Links -->
           <div class="flex gap-6 text-sm">
             <a
+              target="_blank"
               href="privacy.html"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
               data-translate="privacy"
               >سياسة الخصوصية</a
             >
             <a
+              target="_blank"
               href="terms.html"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
               data-translate="terms"
               >شروط الخدمة</a
             >
             <a
+              target="_blank"
               href="contact.html"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
               data-translate="contact"
@@ -867,6 +875,7 @@
           <!-- Social Icons -->
           <div class="flex gap-4" dir="ltr">
             <a
+              target="_blank"
               href="https://x.com/beepbeepksa?s=11"
               aria-label="X"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
@@ -879,6 +888,7 @@
             </a>
 
             <a
+              target="_blank"
               href="https://www.instagram.com/beepbeepksa?igsh=YmZzdnMwN2FmZmE="
               aria-label="Instagram"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
@@ -890,6 +900,7 @@
               </svg>
             </a>
             <a
+              target="_blank"
               href="https://www.linkedin.com/company/beepbeepksa/"
               aria-label="LinkedIn"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
@@ -901,6 +912,7 @@
               </svg>
             </a>
             <a
+              target="_blank"
               href="https://www.tiktok.com/@beepbeepksa?_r=1&_t=ZS-91qAFEMO7Dc"
               aria-label="TikTok"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
@@ -912,6 +924,7 @@
               </svg>
             </a>
             <a
+              target="_blank"
               href="https://snapchat.com/t/mr3outsc"
               aria-label="Snapchat"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
