--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-translate="websiteTitle">بيب بيب - تطبيق التنقل الذكي</title>
-    <link rel="icon" href="logo.png" type="image/png">
-<link rel="apple-touch-icon" href="logo.png">
-<link rel="shortcut icon" href="logo.png" type="image/png">
+    <link rel="icon" href="/assets/img/logo.png" type="image/png">
+<link rel="apple-touch-icon" href="/assets/img/logo.png">
+<link rel="shortcut icon" href="/assets/img/logo.png" type="image/png">
     <!-- Load Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- AOS Library for Scroll Animations -->
@@ -300,7 +300,7 @@ html[dir="ltr"] body {
             <a href="#" class="flex-1 flex justify-center items-center" aria-label="بيب بيب الرئيسية">
                 <div class="relative flex justify-center">
                     <div class="absolute -inset-1 bg-primary-yellow rounded-full blur opacity-30"></div>
-                    <img src="logo.png" alt="لوجو بيب بيب" class="h-16 w-16 object-contain relative">
+                    <img src="/assets/img/logo.png" alt="لوجو بيب بيب" class="h-16 w-16 object-contain relative">
                 </div>
             </a>
 
@@ -389,7 +389,7 @@ html[dir="ltr"] body {
                         <!-- circular logo on top -->
                         <div class="absolute -top-12 left-1/2  transform -translate-x-1/2">
                             <div class="bg-black rounded-full p-2  shadow-xl ">
-                                <img src="/assets/img/beeb-beeb-logo.png" alt="لوجو بيب بيب" class="w-20 h-20 object-cover">
+                                <img src="/assets/img/logo.png" alt="لوجو بيب بيب" class="w-20 h-20 object-cover">
                             </div>
                         </div>
 
@@ -610,37 +610,6 @@ html[dir="ltr"] body {
     </div>
   </div>
 </div>
-
-
-
-                <!-- Slider -->
-                <!-- <div class="product-slider max-w-5xl h-[300px] mx-auto mt-6 relative">
-                    <button type="button" aria-label="previous slide" class="slider-nav prev absolute right-[10rem] top-1/2 -translate-y-1/2 z-50 bg-white rounded-full w-10 h-10 flex items-center justify-center shadow-lg hover:scale-105 transition-transform cursor-pointer">
-                        <span class="text-xl">‹</span>
-                    </button>
-
-                    <div class="slides relative h-[420px] md:h-[520px]">
-                        <div class="slide" data-index="0">
-                            <img src="/assets/img/scooter-down.png" alt="تفاصيل سكوتر" class="w-60 h-60 object-cover rounded-3xl shadow-2xl">
-                        </div>
-                        <div class="slide" data-index="1">
-                            <img src="/assets/img/scooter-head.png" alt="تفاصيل وسطية" class="w-60 h-60 object-cover rounded-3xl shadow-2xl">
-                        </div>
-                        <div class="slide" data-index="2">
-                            <img src="/assets/img/scooter-bottom.png" alt="تفاصيل خلفية" class="w-60 h-60 object-cover rounded-3xl shadow-2xl">
-                        </div>
-                    </div>
-
-                    <button type="button" aria-label="next slide" class="slider-nav next absolute z-50 left-[10rem] top-1/2 -translate-y-1/2 z-30 bg-white rounded-full w-10 h-10 flex items-center justify-center shadow-lg hover:scale-105 transition-transform cursor-pointer">
-                        <span class="text-xl">›</span>
-                    </button>
-
-                    <div class="mt-6 flex justify-center gap-3">
-                        <button class="dot w-3 h-3 rounded-full bg-gray-300" data-index="0" aria-label="slide 1"></button>
-                        <button class="dot w-3 h-3 rounded-full bg-gray-300" data-index="1" aria-label="slide 2"></button>
-                        <button class="dot w-3 h-3 rounded-full bg-gray-300" data-index="2" aria-label="slide 3"></button>
-                    </div>
-                </div> -->
             </div>
         </section> 
         <!-- promo card -->
@@ -651,7 +620,7 @@ html[dir="ltr"] body {
                         <!-- circular logo on top -->
                         <div class="absolute -top-12 left-1/2  transform -translate-x-1/2">
                             <div class="bg-black rounded-full p-2  shadow-xl ">
-                                <img src="logo.png" alt="لوجو بيب بيب" class="h-14 w-14 object-cover">
+                                <img src="/assets/img/logo.png" alt="لوجو بيب بيب" class="h-14 w-14 object-cover">
                             </div>
                         </div>
 
@@ -679,32 +648,32 @@ html[dir="ltr"] body {
                 
                 <!-- Footer Links -->
                 <div class="flex  gap-6 text-sm">
-                    <a href="privacy.html" class="text-gray-400 hover:text-primary-yellow transition-all duration-150" data-translate="privacy">سياسة الخصوصية</a>
-                    <a href="terms.html" class="text-gray-400 hover:text-primary-yellow transition-all duration-150" data-translate="terms">شروط الخدمة</a>
-                    <a href="contact.html" class="text-gray-400 hover:text-primary-yellow transition-all duration-150" data-translate="contact">اتصل بنا</a>
+                    <a target="_blank" href="privacy.html" class="text-gray-400 hover:text-primary-yellow transition-all duration-150" data-translate="privacy">سياسة الخصوصية</a>
+                    <a target="_blank" href="terms.html" class="text-gray-400 hover:text-primary-yellow transition-all duration-150" data-translate="terms">شروط الخدمة</a>
+                    <a target="_blank" href="contact.html" class="text-gray-400 hover:text-primary-yellow transition-all duration-150" data-translate="contact">اتصل بنا</a>
                 </div>
 
                
                 <!-- Social Icons -->
 <div class="flex gap-4 items-center" dir="ltr">
-    <a href="https://x.com/beepbeepksa?s=11" aria-label="X" class="text-gray-400 hover:text-primary-yellow transition-all duration-150">
+    <a target="_blank" href="https://x.com/beepbeepksa?s=11" aria-label="X" class="text-gray-400 hover:text-primary-yellow transition-all duration-150">
     <svg class="w-6 h-6" viewBox="0 0 24 24" fill="currentColor">
         <path d="M18.244 2H21L13.315 10.52 22 22h-6.808l-5.263-6.873L3.56 22H2l8.27-9.035L2 2h6.91l4.77 6.315L18.244 2zm-2.59 17.17h2.057L8.5 4.743H6.293l9.36 14.427z"/>
     </svg>
 </a>
 
-    <a href="https://www.instagram.com/beepbeepksa?igsh=YmZzdnMwN2FmZmE=" aria-label="Instagram" class="text-gray-400 hover:text-primary-yellow transition-all duration-150">
+    <a target="_blank" href="https://www.instagram.com/beepbeepksa?igsh=YmZzdnMwN2FmZmE=" aria-label="Instagram" class="text-gray-400 hover:text-primary-yellow transition-all duration-150">
         <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/></svg>
     </a>
-    <a href="https://www.linkedin.com/company/beepbeepksa/" aria-label="LinkedIn" class="text-gray-400 hover:text-primary-yellow transition-all duration-150">
+    <a target="_blank" href="https://www.linkedin.com/company/beepbeepksa/" aria-label="LinkedIn" class="text-gray-400 hover:text-primary-yellow transition-all duration-150">
         <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
     </a>
-    <a href="https://www.tiktok.com/@beepbeepksa?_r=1&_t=ZS-91qAFEMO7Dc" aria-label="TikTok" class="text-gray-400 hover:text-primary-yellow transition-all duration-150">
+    <a target="_blank" href="https://www.tiktok.com/@beepbeepksa?_r=1&_t=ZS-91qAFEMO7Dc" aria-label="TikTok" class="text-gray-400 hover:text-primary-yellow transition-all duration-150">
         <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
             <path d="M12.53.02C13.84 0 15.14.01 16.44 0c.08 1.53.63 3.09 1.75 4.17 1.12 1.11 2.7 1.62 4.24 1.79v4.03c-1.44-.05-2.89-.35-4.2-.97-.57-.26-1.1-.59-1.62-.93-.01 2.92.01 5.84-.02 8.75-.08 1.4-.54 2.79-1.35 3.94-1.31 1.92-3.58 3.17-5.91 3.21-1.43.08-2.86-.31-4.08-1.03-2.02-1.19-3.44-3.37-3.65-5.71-.02-.5-.03-1-.01-1.49.18-1.9 1.12-3.72 2.58-4.96 1.66-1.44 3.98-2.13 6.15-1.72.02 1.48-.04 2.96-.04 4.44-.99-.32-2.15-.23-3.02.37-.63.41-1.11 1.04-1.36 1.75-.21.51-.15 1.07-.14 1.61.24 1.64 1.82 3.02 3.5 2.87 1.12-.01 2.19-.66 2.77-1.61.19-.33.4-.67.41-1.06.1-1.79.06-3.57.07-5.36.01-4.03-.01-8.05.02-12.07z"/>
         </svg>
     </a>
-    <a href="https://snapchat.com/t/mr3outsc" aria-label="Snapchat" class="text-gray-400 hover:text-primary-yellow transition-all duration-150 mt-1.5">
+    <a target="_blank" href="https://snapchat.com/t/mr3outsc" aria-label="Snapchat" class="text-gray-400 hover:text-primary-yellow transition-all duration-150 mt-1.5">
     <svg class="w-6 h-6" viewBox="0 0 24 24" fill="currentColor">
         <path d="M12 2c2.39 0 4.32 1.94 4.32 4.32v1.02c.01.35.21.66.53.79 1.01.44 2.1 1.02 2.1 2.14 0 .58-.32 1.09-.89 1.43-.28.17-.45.47-.45.78 0 .47.32.89.76 1.02.47.14.96.29 1.36.51.33.17.55.5.55.86a.97.97 0 01-.97.97c-.18 0-.36-.05-.54-.13a4.47 4.47 0 00-1.89-.45c-.41 0-.81.07-1.2.22-.46.16-.95.25-1.45.25-.73 0-1.42-.18-2.04-.49a1.86 1.86 0 00-1.7 0 4.7 4.7 0 01-2.04.49c-.5 0-.99-.09-1.45-.25-.38-.15-.79-.22-1.2-.22-.7 0-1.36.18-1.89.45-.18.08-.36.13-.54.13a.97.97 0 01-.97-.97c0-.36.22-.69.55-.86.4-.22.89-.37 1.36-.51.44-.13.76-.55.76-1.02 0-.31-.17-.6-.45-.78-.57-.34-.89-.85-.89-1.43 0-1.12 1.1-1.7 2.1-2.14.32-.13.52-.44.53-.79V6.32C7.68 3.94 9.61 2 12 2z"/>
     </svg>
