--- a/privacy.html
+++ b/privacy.html
@@ -443,7 +443,7 @@
               class="absolute -inset-1 bg-primary-yellow rounded-full blur opacity-30"
             ></div>
             <img
-              src="logo.png"
+              src="/assets/img/logo.png"
               alt="لوجو بيب بيب"
               class="h-16 w-16 object-contain relative"
             />
@@ -800,18 +800,21 @@
           <!-- Footer Links -->
           <div class="flex gap6 text-sm">
             <a
+              target="_blank"
               href="privacy.html"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
               data-translate="privacy"
               >سياسة الخصوصية</a
             >
             <a
+              target="_blank"
               href="terms.html"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
               data-translate="terms"
               >شروط الخدمة</a
             >
             <a
+              target="_blank"
               href="contact.html"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
               data-translate="contact"
@@ -822,6 +825,7 @@
           <!-- Social Icons -->
           <div class="flex gap-4" dir="ltr">
             <a
+              target="_blank"
               href="https://x.com/beepbeepksa?s=11"
               aria-label="X"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
@@ -834,6 +838,7 @@
             </a>
 
             <a
+              target="_blank"
               href="https://www.instagram.com/beepbeepksa?igsh=YmZzdnMwN2FmZmE="
               aria-label="Instagram"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
@@ -845,6 +850,7 @@
               </svg>
             </a>
             <a
+              target="_blank"
               href="https://www.linkedin.com/company/beepbeepksa/"
               aria-label="LinkedIn"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
@@ -856,6 +862,7 @@
               </svg>
             </a>
             <a
+              target="_blank"
               href="https://www.tiktok.com/@beepbeepksa?_r=1&_t=ZS-91qAFEMO7Dc"
               aria-label="TikTok"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
@@ -867,6 +874,7 @@
               </svg>
             </a>
             <a
+              target="_blank"
               href="https://snapchat.com/t/mr3outsc"
               aria-label="Snapchat"
               class="text-gray-400 hover:text-primary-yellow transition-all duration-150"
